Fix datepicker-panel truncation
A spotted bug (?) in upsert-member after migrations to v21

--- a/Frontend/projectk-frontend/src/styles.css
+++ b/Frontend/projectk-frontend/src/styles.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
 @plugin "tailwindcss-primeui";
+
+/* After migration to Angular v21 and PrimeNG v21 there was a bug 
+where the datepicker panel would not display correctly in some divs
+and datepicker-panel has been truncated with width of parent divs (imo).
+So after that I've found a little fix and want to apply it globally. */
+.p-datepicker-panel {
+    width: fit-content !important;
+}
